force-app/main/default/objects/Booking__c/fields/Sale_Agreement_Collected__c.field-meta.xml
<CustomField>
    <fullName>Sale_Agreement_Collected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sale Agreement Collected</label>
    <type>Checkbox</type>
</CustomField>