force-app/main/default/objects/Booking__c/fields/Schemes_Offers_Names__c.field-meta.xml
<CustomField>
    <fullName>Schemes_Offers_Names__c</fullName>
    <label>Schemes &amp; Offers Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>