force-app/main/default/objects/Booking__c/fields/Second_Floor_Key_No__c.field-meta.xml
<CustomField>
    <fullName>Second_Floor_Key_No__c</fullName>
    <label>Second Floor Key No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>