force-app/main/default/objects/Booking__c/fields/Second_Floor_No_of_Keys__c.field-meta.xml
<CustomField>
    <fullName>Second_Floor_No_of_Keys__c</fullName>
    <label>Second Floor No.of Keys</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>