force-app/main/default/objects/Booking__c/fields/Show_Custom_Buttons__c.field-meta.xml
<CustomField>
    <fullName>Show_Custom_Buttons__c</fullName>
    <formula>Is_Opened_By_Owner__c ||  $Profile.Name == &apos;System Administrator&apos; ||  $Profile.Name == &apos;CRM Manager&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Custom Buttons</label>
    <type>Checkbox</type>
</CustomField>