force-app/main/default/objects/Booking__c/fields/Signed_Agreement_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Signed_Agreement_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed Agreement Uploaded</label>
    <type>Checkbox</type>
</CustomField>