force-app/main/default/objects/Booking__c/fields/Signed_Sales_Deed_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Signed_Sales_Deed_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed Sale Deed Uploaded</label>
    <type>Checkbox</type>
</CustomField>