force-app/main/default/objects/Booking__c/fields/Sit_Out_Key_No__c.field-meta.xml
<CustomField>
    <fullName>Sit_Out_Key_No__c</fullName>
    <label>Sit Out Key No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>