force-app/main/default/objects/Booking__c/fields/Sit_Out_No_of_Keys__c.field-meta.xml
<CustomField>
    <fullName>Sit_Out_No_of_Keys__c</fullName>
    <label>Sit Out No.of Keys</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>