force-app/main/default/objects/Booking__c/fields/Son_Daughter_Wife_of1__c.field-meta.xml
<CustomField>
    <fullName>Son_Daughter_Wife_of1__c</fullName>
    <label>S/o, D/o, W/o</label>
    <length>80</length>
    <type>Text</type>
</CustomField>