force-app/main/default/objects/Booking__c/fields/Sub_Stages__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stages__c</fullName>
    <label>Management Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Management User Approved</fullName>
            </value>
            <value>
                <fullName>Management User Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Project Sales Head Approved</fullName>
                <isActive>false</isActive>
                <label>Project Sales Head Approved</label>
            </value>
            <value>
                <fullName>Project Sales Head Rejected</fullName>
                <isActive>false</isActive>
                <label>Project Sales Head Rejected</label>
            </value>
            <value>
                <fullName>Sales Head Approved</fullName>
                <isActive>false</isActive>
                <label>Sales Head Approved</label>
            </value>
            <value>
                <fullName>Sales Head Rejected</fullName>
                <isActive>false</isActive>
                <label>Sales Head Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>