force-app/main/default/objects/Booking__c/fields/Swap_Applicant_Request__c.field-meta.xml
<CustomField>
    <fullName>Swap_Applicant_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Swap Applicant Request</label>
    <type>Checkbox</type>
</CustomField>