force-app/main/default/objects/Booking__c/fields/Swap_Quote__c.field-meta.xml
<CustomField>
    <fullName>Swap_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Swap Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Bookings (Swap Quote)</relationshipLabel>
    <relationshipName>Bookings1</relationshipName>
    <type>Lookup</type>
</CustomField>