force-app/main/default/objects/Booking__c/fields/Tax_Receipt_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Tax_Receipt_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Receipt Uploaded</label>
    <type>Checkbox</type>
</CustomField>