force-app/main/default/objects/Booking__c/fields/Total_Amount_Crores__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Crores__c</fullName>
    <formula>Total_Amount__c / 10000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount (Crores)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>