force-app/main/default/objects/Booking__c/fields/Total_Amount_Lakhs__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Lakhs__c</fullName>
    <formula>&quot;₹ &quot; &amp; TEXT(ROUND(Total_Amount__c / 100000, 2)) &amp; &quot; L&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount (Lakhs)</label>
    <type>Text</type>
</CustomField>