force-app/main/default/objects/Booking__c/fields/Total_Land_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Land_Amount__c</fullName>
    <formula>Plot_Land_Cost__c + Extra_Land_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Land Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>