force-app/main/default/objects/Booking__c/fields/Total_Pending_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Pending_Amount__c</fullName>
    <formula>Pending_Amount__c / 10000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Amount (Crores)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>