force-app/main/default/objects/Booking__c/fields/Total_Tds_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Tds_Amount__c</fullName>
    <formula>IF(
    OR(
        TEXT(Project_Type__c) = &apos;Apartments&apos;,
        TEXT(Project_Type__c) = &apos;Row House&apos;
    ),

    Total_Amount__c * 0.01,

    IF(
        TEXT(Project_Type__c) = &apos;Villas&apos;,

        (Construction_Cost__c * 0.02)
        +
        (Total_Land_Amount__c * 0.01),

        0
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Tds Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>