force-app/main/default/objects/Booking__c/fields/Type_of_Aggrement__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Aggrement__c</fullName>
    <label>Type of Aggrement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Joint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>