force-app/main/default/objects/Booking__c/fields/Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number__c</fullName>
    <label>Flat Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>