force-app/main/default/objects/Booking__c/fields/Unit_Readiness_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Unit_Readiness_Date_Time__c</fullName>
    <label>Unit Readiness Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>