force-app/main/default/objects/Booking__c/fields/Unit_Readiness_Mail_Sent__c.field-meta.xml
<CustomField>
    <fullName>Unit_Readiness_Mail_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unit Readiness Mail Sent</label>
    <type>Checkbox</type>
</CustomField>