force-app/main/default/objects/Booking__c/fields/Welcome_Email_Sent_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Email_Sent_to_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Welcome Email Sent to Customer</label>
    <type>Checkbox</type>
</CustomField>