force-app/main/default/objects/Booking__c/fields/Welcome_Mail_Sent_Time__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Mail_Sent_Time__c</fullName>
    <label>Welcome Mail Sent Time</label>
    <type>DateTime</type>
</CustomField>