force-app/main/default/objects/Booking__c/recordTypes/Row_House.recordType-meta.xml
<RecordType>
    <fullName>Row_House</fullName>
    <active>true</active>
    <label>Row House</label>
</RecordType>