force-app/main/default/objects/Booking__c/validationRules/Agreement_Status_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Agreement_Status_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>(TEXT(Agreement_Status__c) = &apos;Executed&apos; || TEXT(Agreement_Status__c) = &apos;Executed &amp; Registered&apos;)
&amp;&amp;  ISBLANK( Agreement_Executed_Date__c )</errorConditionFormula>
    <errorDisplayField>Agreement_Executed_Date__c</errorDisplayField>
    <errorMessage>Please enter the Agreement Executed Date when the Agreement Status is Executed</errorMessage>
</ValidationRule>