force-app/main/default/objects/Booking__c/validationRules/Agreement_Status_Validation_CRM_Executiv.validationRule-meta.xml
<ValidationRule>
    <fullName>Agreement_Status_Validation_CRM_Executiv</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Stage_Status__c)
&amp;&amp; TEXT(Stage_Status__c) = &apos;Completed&apos;
&amp;&amp; TEXT(Stage__c) = &apos;Agreement&apos;
&amp;&amp; (TEXT(Agreement_Status__c) &lt;&gt; 	&apos;Executed&apos;)</errorConditionFormula>
    <errorMessage>Please update the agreement status to Executed before marking the Agreement stage as completed.</errorMessage>
</ValidationRule>