force-app/main/default/objects/Booking__c/validationRules/Booked_Welcome_Call_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Booked_Welcome_Call_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Stage__c)
&amp;&amp; TEXT(Stage__c) = &apos;Agreement&apos;
&amp;&amp; ( Welcome_Call_Done__c = false)</errorConditionFormula>
    <errorMessage>Please complete the welcome call with the customer before marking the Stage as Agreement.</errorMessage>
</ValidationRule>