force-app/main/default/objects/Booking__c/validationRules/Booked_Welcome_Mail_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Booked_Welcome_Mail_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Stage__c)
&amp;&amp; TEXT(Stage__c) = &apos;Agreement&apos;
&amp;&amp; (Welcome_Email_Sent_to_Customer__c = false)</errorConditionFormula>
    <errorMessage>Welcome mail was not sent to the customer. Please send the welcome mail to customer before marking the Stage as Agreement.</errorMessage>
</ValidationRule>