force-app/main/default/objects/Booking__c/validationRules/Demands_Stage_Completion_Loan_Funding.validationRule-meta.xml
<ValidationRule>
    <fullName>Demands_Stage_Completion_Loan_Funding</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Stage_Status__c)
    &amp;&amp; TEXT(Stage_Status__c) = &apos;Completed&apos;
    &amp;&amp; TEXT(Stage__c) = &apos;Demands &amp; Progressive Collections&apos;
    &amp;&amp; ISPICKVAL(Funding_Type__c, &apos;Loan&apos;)
    &amp;&amp; NOT(DD_Uploaded__c)</errorConditionFormula>
    <errorMessage>The Funding Type is Loan and there is a Pending Amount greater than zero.
Please upload the DD (Demand Draft) as proof of loan commitment
before marking stage as Completed.</errorMessage>
</ValidationRule>