force-app/main/default/objects/Booking__c/validationRules/Final_NOC_Uploaded_Validation_appartment.validationRule-meta.xml
<ValidationRule>
    <fullName>Final_NOC_Uploaded_Validation_appartment</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Stage_Status__c)
&amp;&amp; TEXT(Stage_Status__c) = &apos;Completed&apos;
&amp;&amp; (TEXT(Stage__c) = &apos;Registration&apos;)
&amp;&amp; (Final_NOC_Uploaded__c = False )</errorConditionFormula>
    <errorMessage>Please upload Final NOC before marking the Registration stage as completed</errorMessage>
</ValidationRule>