force-app/main/default/objects/Booking__c/validationRules/handoverstagePendingAmountClear.validationRule-meta.xml
<ValidationRule>
    <fullName>handoverstagePendingAmountClear</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED(Stage__c),
  ISPICKVAL(Stage__c, &quot;Hand Over&quot;),
  ISPICKVAL(Funding_Type__c, &quot;Loan&quot;),
  BLANKVALUE(Pending_Amount__c, 0) &lt;&gt; 0
)</errorConditionFormula>
    <errorMessage>Handover is not allowed while Pending Amount is not Cleared</errorMessage>
</ValidationRule>