force-app/main/default/objects/Booking__c/validationRules/Key_Handover_Letter_CRM_Executive.validationRule-meta.xml
<ValidationRule>
    <fullName>Key_Handover_Letter_CRM_Executive</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Stage_Status__c)
&amp;&amp; TEXT(Stage_Status__c) = &apos;Completed&apos;
&amp;&amp; TEXT(Stage__c) = &apos;Possession / Handover&apos;
&amp;&amp; Key_Handover_Letter_Uploaded__c = false</errorConditionFormula>
    <errorMessage>Please upload the Key Handover Letter before marking the Possession / Handover stage as completed</errorMessage>
</ValidationRule>